[package]
name = "repl"
version = "0.1.0"
edition = "2024"
default-run = "repl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ctrlc = { version = "3.0", features = ["termination"] }
rustyline = "9.0.0"
rlisp_core = { path = "../rlisp_core" }
